fix(admin-ui): enrich authentication UsedBy client payloads with internal ids
Extend ui-ext /flows UsedBy for SPECIFIC_CLIENTS with clientRefs (realm internal id plus clientId).
Return the same shape from paginated authentication-management used-by clients rows.
Drop clients.find resolution from UsedBy.tsx.

Signed-off-by: Vishal Kumar Singh <vishal.kr.singh2021@gmail.com>