@@ -17,6 +17,7 @@ import jakarta.ws.rs.core.MediaType;
 import org.keycloak.admin.ui.rest.model.Authentication;
 import org.keycloak.admin.ui.rest.model.AuthenticationMapper;
 import org.keycloak.admin.ui.rest.model.ConfigurableRequiredActionProviderRepresentation;
+import org.keycloak.admin.ui.rest.model.UsedByClientRef;
 import org.keycloak.authentication.RequiredActionFactory;
 import org.keycloak.authentication.RequiredActionProvider;
 import org.keycloak.models.AuthenticationFlowModel;
@@ -89,12 +90,12 @@ public class AuthenticationManagementResource extends RoleMappingResource {
             description = "",
             content = {@Content(
                     schema = @Schema(
-                            implementation = String.class,
+                            implementation = UsedByClientRef.class,
                             type = SchemaType.ARRAY
                     )
             )}
     )
-    public final List<String> listUsed(@PathParam("id") String id, @PathParam("type") String type, @QueryParam("first") @DefaultValue("0") int first,
+    public final List<UsedByClientRef> listUsed(@PathParam("id") String id, @PathParam("type") String type, @QueryParam("first") @DefaultValue("0") int first,
             @QueryParam("max") @DefaultValue("10") int max, @QueryParam("search") @DefaultValue("") String search) {
         auth.realm().requireViewAuthenticationFlows();
 
@@ -106,12 +107,13 @@ public class AuthenticationManagementResource extends RoleMappingResource {
                             c -> c.getAuthenticationFlowBindingOverrides().get("browser") != null && c.getAuthenticationFlowBindingOverrides()
                                     .get("browser").equals(flow.getId()) || c.getAuthenticationFlowBindingOverrides()
                                     .get("direct_grant") != null && c.getAuthenticationFlowBindingOverrides().get("direct_grant").equals(flow.getId()))
-                    .map(ClientModel::getClientId).filter(f -> f.contains(search))
+                    .map(c -> new UsedByClientRef(c.getId(), c.getClientId())).filter(ref -> ref.getClientId().contains(search))
                     .skip("".equals(search) ? first : 0).limit(max).collect(Collectors.toList());
         }
 
         if ("idp".equals(type)) {
-            return session.identityProviders().getByFlow(flow.getId(), search, first, max).toList();
+            return session.identityProviders().getByFlow(flow.getId(), search, first, max)
+                    .map(alias -> new UsedByClientRef(null, alias)).collect(Collectors.toList());
         }
 
         throw new IllegalArgumentException("Invalid type");
